--- a/login_style.css
+++ b/login_style.css
@@ -32,4 +32,8 @@ body {
     text-align: left;
     padding-left: 20px;
     font-size: 18px;
+    padding-bottom: 5px;
+}
+.send-button {
+    text-align: center;
 }
