--- a/feedback_style.css
+++ b/feedback_style.css
@@ -1,28 +1,21 @@
 body {
-    margin: 0;
+    margin: 0 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
-     
 }
-/*
-.header {
-    margin: 0px;
-    
-}*/
 .background-autumn {
     padding-top: -10px;
     margin: 0;
-    background-image: url(autumn.jpg);
+    background-image: url(bg_1.jpg); 
     height: 100vh;
     background-repeat: round;
-    background-size: 100%;
-    margin-bottom: 0px;  
-    
+    background-size: 30%;
+    margin-bottom: -40px;
 }
 .container {
     margin: 0 30%;
     padding-left: 0px;
-    background-color: antiquewhite;
+    background-color: #e4c2ff;
     background-size: cover;
     width: 40%;
     position:relative;
