--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a:before {
 }
 
 
-.table1 {
+.table {
 	border: none;
 	margin-bottom: 20px;
 	border-collapse: separate;
@@ -87,11 +87,11 @@ a:before {
     top: 3%;
     background-color: white;
 }
-.table1 caption {
+.table caption {
     font-weight: bold;
     font-size: 16px;
 }
-.table1 thead th {
+.table thead th {
 	font-weight: bold;
 	text-align: left;
 	border: none;
@@ -102,92 +102,40 @@ a:before {
 	font-size: 12px;
 	border-top: 1px solid #ddd;
 }
-.table1 tr th:first-child, .table tr td:first-child {
+.table tr th:first-child, .table tr td:first-child {
 	border-left: 1px solid #ddd;
 }
-.table1 tr th:last-child, .table tr td:last-child {
+.table tr th:last-child, .table tr td:last-child {
 	border-right: 1px solid #ddd;
 }
-.table1 thead tr th:first-child {
+.table thead tr th:first-child {
 	border-radius: 20px 0 0 0;
 }
-.table1 thead tr th:last-child {
+.table thead tr th:last-child {
 	border-radius: 0 20px 0 0;
 }
-.table1 tbody td {
+.table tbody td {
 	text-align: left;
 	border: none;
 	padding: 10px 15px;
 	font-size: 12px;
 	vertical-align: top;
 }
-.table1 tbody tr:nth-child(even) {
+.table tbody tr:nth-child(even) {
 	background: #e4c2ff;
 }
-.table1 tbody tr:last-child td{
+.table tbody tr:last-child td{
 	border-bottom: 1px solid #ddd;
 }
-.table1 tbody tr:last-child td:first-child {
+.table tbody tr:last-child td:first-child {
 	border-radius: 0 0 0 20px;
 }
-.table1 tbody tr:last-child td:last-child {
+.table tbody tr:last-child td:last-child {
 	border-radius: 0 0 20px 0;
 }
-
-.table2 {
-	border: none;
-	margin-bottom: 20px;
-	border-collapse: separate;
+#table2 {
     position: relative;
-    top: 1%;
     left: 37.5%;
-    background-color: white;
-}
-.table2 caption {
-    font-weight: bold;
-    font-size: 16px;
-}
-.table2 thead th {
-	font-weight: bold;
-	text-align: left;
-	border: none;
-  text-align: center;
-	padding: 10px 15px;
-	background: #2D0051;
-  color: white;
-	font-size: 12px;
-	border-top: 1px solid #ddd;
-}
-.table2 tr th:first-child, .table tr td:first-child {
-	border-left: 1px solid #ddd;
-}
-.table2 tr th:last-child, .table tr td:last-child {
-	border-right: 1px solid #ddd;
-}
-.table2 thead tr th:first-child {
-	border-radius: 20px 0 0 0;
-}
-.table2 thead tr th:last-child {
-	border-radius: 0 20px 0 0;
-}
-.table2 tbody td {
-	text-align: left;
-	border: none;
-	padding: 10px 15px;
-	font-size: 12px;
-	vertical-align: top;
-}
-.table2 tbody tr:nth-child(even) {
-	background: #e4c2ff;
-}
-.table2 tbody tr:last-child td{
-	border-bottom: 1px solid #ddd;
-}
-.table2 tbody tr:last-child td:first-child {
-	border-radius: 0 0 0 20px;
-}
-.table2 tbody tr:last-child td:last-child {
-	border-radius: 0 0 20px 0;
 }
 
 
