--- a/login_style.css
+++ b/login_style.css
@@ -2,8 +2,9 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
+    background-color: #2D0051;
 }
-.background-autumn {
+.background-login {
     padding-top: -10px;
     margin: 0;
     background-image: url(bg_1.jpg); 
@@ -26,6 +27,14 @@ body {
     padding-left: 20px;
     font-size: 14px;
     padding-bottom: 5px;
+    padding-top: 20px;
+}
+.hp-back {
+    color: #2D0051;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
 }
 .send-button {
     text-align: center;
