--- a/login_style.css
+++ b/login_style.css
@@ -10,6 +10,7 @@ body {
 }
 .header {
     margin: 0px;
+    margin-bottom: -30px;
 }
 .nav {
     color: white;
@@ -61,12 +62,11 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-
 .background-login {
     padding-top: -10px;
     margin: 0;
     background-image: url(bg_1.jpg); 
-    height: 100vh;
+    height: 88vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -40px;
@@ -90,14 +90,69 @@ a:before {
     padding-bottom: 5px;
     padding-top: 20px;
 }
-/*
-.hp-back {
-    color: #2D0051;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 18px;
-    text-align: center;
-}*/
+
 .send-button {
     text-align: center;
+}
+
+footer {
+    margin-bottom: 0;
+    position: relative;
+    bottom: 5px;
+}
+
+.down-line {
+    height: 2vh;
+    padding-top: 38px;
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    padding-bottom: 2%;
+}
+.bottom-items {
+    color: white;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 14px;
+    position: relative;
+    bottom: -20px;
+}
+
+.my-name {
+    color: white;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 14px;
+}
+.text-email {
+    color: white;
+    text-decoration: none;
+    margin: 20px;
+    margin-right: 5px;
+    font-weight: 700;
+    font-size: 14px;
+}
+.email {
+    color: white;
+    text-decoration: none;
+    margin: 0px 0px;
+    font-weight: 700;
+    font-size: 14px;
+}
+.text-phone {
+    color: white;
+    text-decoration: none;
+    margin-right: 5px;
+    margin-left: 50px;
+    object-position: center;
+    font-weight: 700;
+    font-size: 14px;
+}
+.number-phone {
+    color: white;
+    text-decoration: none;
+    margin: 0px 0px;
+    object-position: center;
+    font-weight: 700;
+    font-size: 14px;
 }
