--- a/feedback_style.css
+++ b/feedback_style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0 0;
     font-family: 'Open Sans', sans-serif;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    
     background-color: #2D0051;
 }
 
@@ -63,11 +64,12 @@ a:before {
 }
 
 
-.background-login {
+.background-fb {
     padding-top: -10px;
     margin: 0;
-    background-image: url(bg_1.jpg); 
+    background-image: url(bg_6.jpg); 
     height: 88vh;
+    /*width: 100vw;*/
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -40px;
