--- a/feedback_style.css
+++ b/feedback_style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0 0;
+    margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
     background-color: #2D0051;
@@ -63,7 +63,7 @@ a:before {
 }
 
 
-.background-login {
+.background-fb {
     padding-top: -10px;
     margin: 0;
     background-image: url(bg_1.jpg); 
