--- a/login_style.css
+++ b/login_style.css
@@ -156,3 +156,13 @@ footer {
     font-weight: 700;
     font-size: 14px;
 }
+
+.foot-date {
+    color: white;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 14px;
+    position: relative;
+    right: -400px;
+    bottom: -20px;
+}
