--- a/login_style.css
+++ b/login_style.css
@@ -4,13 +4,17 @@ body {
     overflow: hidden;
     background-color: #2D0051;
 }
-
-.container {
-    margin: 0px;   
-}
 .header {
     margin: 0px;
     margin-bottom: -22px;
+}
+.container {
+    margin: 0px;   
+}
+.header-line {
+    padding-top: 25px;
+    display: flex;
+    margin: 0px;
 }
 .nav {
     color: white;
@@ -21,20 +25,6 @@ body {
     vertical-align: text-bottom;
     font-weight: 700;
     font-size: 14px;
-}
-
-
-.header-line {
-    padding-top: 25px;
-    display: flex;
-    margin: 0px;
-    padding-bottom: -20px;
-}
-.my-page {
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 22px;
 }
 a {
     color: #fff;
@@ -63,15 +53,12 @@ a:before {
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
 .background-login {
-    /*padding-top: -10px;
-    margin: 0;*/
     background-image: url(bg_1.jpg);
     height: 88vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -45px; 
 }
-
 .container-login-form {
     margin: 0 30%;
     padding-left: 0px;
@@ -82,7 +69,6 @@ a:before {
     position:relative;
     text-align: center;
 }
-
 .elements-login {
     text-align: left;
     padding-left: 20px;
@@ -90,21 +76,14 @@ a:before {
     padding-bottom: 5px;
     padding-top: 20px;
 }
-
 .send-button {
     text-align: center;
 }
-
-/*
-footer {
-    margin-bottom: 0;
-    position: relative;
-    bottom: 5px;
-}*/
-
+.footer {
+    margin-top: 5px;
+}
 .down-line {
-    /*padding-bottom: 2%;*/
-    height: 2vh;
+    height: 0.2vh;
     padding-top: 36px;
     display: flex;
     align-items: center;
@@ -116,9 +95,9 @@ footer {
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    bottom: -20px;
+    bottom: -2px;
+    vertical-align: middle;
 }
-
 .my-name {
     color: white;
     text-decoration: none;
@@ -157,13 +136,12 @@ footer {
     font-weight: 700;
     font-size: 14px;
 }
-
 .foot-date {
     color: white;
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    right: -400px;
-    bottom: -20px;
+    right: -410px;
+    object-position: center;
 }
