--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@ body {
     overflow: hidden;
     background-color: #2D0051;
 }
+.header {
+    margin: 0px;
+}
 .container {
     margin: 0px;   
 }
-.header {
+.header-line {
+    padding-top: 25px;
+    display: flex;
     margin: 0px;
 }
 .nav {
@@ -19,19 +24,6 @@ body {
     vertical-align: text-bottom;
     font-weight: 700;
     font-size: 14px;
-}
-
-
-.header-line {
-    padding-top: 25px;
-    display: flex;
-    margin: 0px;
-}
-.my-page {
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 22px;
 }
 a {
     color: #fff;
@@ -59,14 +51,12 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-
-
 .elements {
     background-image: url(bg_1.jpg);
     height: 88vh;
     background-repeat: round;
     background-size: 30%;
-    margin-bottom: -45px;   
+    margin-bottom: -45px;
 }
 .text-desc {
     padding-left: 10px;
@@ -77,106 +67,29 @@ a:before {
     background-color: #2D0051;
     color: #e4c2ff;
 }
-/*
-.bird-pic {
-    vertical-align: middle;
-    position: absolute;
-    top: 30%;
-    left: -190px;
-}
-.cat-pic {
-    position: absolute;
-    top: 60%;
-    left: 15%;
-}*/
 .pictures-hp {
     position: absolute;
-    top: 400px;
-    left: 150px;
+    /*top: 400px;*/
+    top: 20%;
+    left: 43%;
     transform: rotate(-30deg)
 }
-
-.table {
-	border: none;
-	margin-bottom: 20px;
-	border-collapse: separate;
-    position: relative;
-    left: 60.5%;
-    top: 3%;
-    background-color: white;
-}
-.table caption {
-    font-weight: bold;
-    font-size: 16px;
-    text-align: right;
-}
-.table thead th {
-	font-weight: bold;
-	text-align: left;
-	border: none;
-  text-align: center;
-	padding: 10px 15px;
-	background: #2D0051;
-  color: white;
-	font-size: 12px;
-	border-top: 1px solid #ddd;
-}
-.table tr th:first-child, .table tr td:first-child {
-	border-left: 1px solid #ddd;
-}
-.table tr th:last-child, .table tr td:last-child {
-	border-right: 1px solid #ddd;
-}
-.table thead tr th:first-child {
-	border-radius: 20px 0 0 0;
-}
-.table thead tr th:last-child {
-	border-radius: 0 20px 0 0;
-}
-.table tbody td {
-	text-align: left;
-	border: none;
-	padding: 10px 15px;
-	font-size: 12px;
-	vertical-align: top;
-}
-.table tbody tr:nth-child(even) {
-	background: #e4c2ff;
-}
-.table tbody tr:last-child td{
-	border-bottom: 1px solid #ddd;
-}
-.table tbody tr:last-child td:first-child {
-	border-radius: 0 0 0 20px;
-}
-.table tbody tr:last-child td:last-child {
-	border-radius: 0 0 20px 0;
-}
-#table2 {
-    position: relative;
-    left: 37.5%;
-}
-
 .list {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
     position: absolute;
-    top: 60%;
-    left: 37.5%;
+    top: 14%;
+    right: 4.5%;
     background-color: #2D0051;
     color: #e4c2ff;
 }
-
 .footer {
     margin-top: 5px;
 }
-
-
-
 .down-line {
-    height: 2vh;
+    height: 0.2vh;
     padding-top: 36px;
     display: flex;
     align-items: center;
@@ -188,9 +101,9 @@ a:before {
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    bottom: -20px;
+    bottom: -2px;
+    vertical-align: middle;
 }
-
 .my-name {
     color: white;
     text-decoration: none;
@@ -229,13 +142,13 @@ a:before {
     font-weight: 700;
     font-size: 14px;
 }
-
 .foot-date {
     color: white;
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
     position: relative;
-    right: -400px;
-    bottom: -20px;
+    right: -410px;
+    
+    object-position: center;
 }
