adding a reset button and deleting a pic

--- a/feedback_style.css
+++ b/feedback_style.css
@@ -82,7 +82,7 @@ a:before {
 .from-where, .appeal-text {
     line-height: 0.3em;
 }
-.send-button {
+.buttons {
     text-align: center;
 }
 .footer {
