--- a/in_8lab.css
+++ b/in_8lab.css
@@ -1,5 +1,154 @@
 body {
     margin: 0;
+    background-color: #F2F5F1;
+}
+
+.header {
+    background-color: #1d3557;
+    color: white;
+    font-size: 40px;
+    padding: 20px;
+    padding-left: 50px;
+}
+
+.header > nav {
+    display: flex;
+}
+
+.title {
+    margin-left: 20px;
+}
+
+.logo {
+    max-height: 50px;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.facts-list-item {
+    margin-top: 20px;
+    background-color: #d7d7d7;
+}
+
+.item-content {
+    padding: 20px;
+}
+
+.item-footer {
+    display: flex;
+    padding: 10px;
+    background-color: #1d3557;
+    color: white;
+    font-weight: bold;
+}
+
+.author-name {
+    flex-grow: 1;
+}
+
+.upvotes {
+    background-image: url('images/upvote_white.png');
+    background-position: left;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-left: 30px;
+}
+
+.pagination-info {
+    margin-top: 20px;
+    font-weight: bold;
+    display: flex;
+}
+
+.current-interval-info {
+    margin-left: auto;
+}
+
+.per-page-btn {
+    background-color: white;
+    font-size: 20px;
+    border: 1px solid black;
+}
+
+.pagination {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0;
+    height: 40px;
+}
+
+.btn {
+    background-color: #e63946;
+    padding: 0 10px;
+    font-size: 100%;
+    font-weight: bold;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    height: 100%;
+    border: 5px solid #e63946;
+    box-sizing: border-box;
+}
+
+.btn:hover {
+    background-color: #F2F5F1;
+    color: black;
+}
+
+.active {
+    background-color: #F2F5F1;
+    color: black;
+}
+
+.first-page-btn, .last-page-btn {
+    width: 250px;
+}
+
+.pages-btns > button {
+    margin-right: 5px;
+}
+
+.search-form {
+    margin: 40px 0;
+    display: flex;
+}
+
+.search-field {
+    flex-grow: 1;
+    height: 40px;
+    border: 5px solid #e63946;
+    box-sizing: border-box;
+    padding: 0 20px;
+    font-size: 100%;
+    outline: none;
+}
+
+.search-btn {
+    padding: 0 20px;
+    font-size: 100%;
+    font-weight: bold;
+    background-color: #e63946;
+    border: 5px solid #e63946;
+    border-left: none;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.search-btn:hover {
+    background-color: #F2F5F1;
+    color: black;
+}
+
+
+
+body {
+    margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
     background-color: #2D0051;
@@ -24,6 +173,9 @@ body {
     vertical-align: text-bottom;
     font-weight: 700;
     font-size: 14px;
+}
+#calc_7lab {
+    color: #e4c2ff;
 }
 a {
     color: #fff;
@@ -58,123 +210,6 @@ a:before {
     background-size: 30%;
     margin-bottom: -45px;
 }
-.calc-pic {
-    position: absolute;
-    top: 100px;
-    left: 590px;
-    z-index: -0.9;
-}
-h6 {
-    font-family: 'Island Moments', cursive;
-    font-size: 26px;
-    color: #6600CC;
-    position: absolute;
-    top: 50px;
-    left: 725px;
-}
-#out_screen {
-    position: absolute;
-    top: 150px;
-    left: 630px;
-    opacity: 70%;
-}
-
-.key_bracket, .key_clear, .key_operation,
-.key_digit, .key_result {
-    cursor: pointer;
-    color: #6600CC;
-    width: 52px;
-    height: 44px;
-    position: absolute;
-    z-index: 1;
-}
-
-#b_c_all {
-    top: 265px;
-    left: 629px;
-}
-#b_l {
-    top: 265px;
-    left: 701px;
-}
-#b_r {
-    top: 265px;
-    left: 773px;
-}
-#o_d {
-    top: 265px;
-    left: 845px;
-}
-#d_7 {
-    top: 328px;
-    left: 629px;
-}
-#d_8 {
-    top: 328px;
-    left: 701px;
-}
-#d_9 {
-    top: 328px;
-    left: 773px;
-}
-#o_m {
-    top: 328px;
-    left: 845px;
-}
-#d_4 {
-    top: 391px;
-    left: 629px;
-}
-#d_5 {
-    top: 391px;
-    left: 701px;
-}
-#d_6 {
-    top: 391px;
-    left: 773px;
-}
-#o_s {
-    top: 391px;
-    left: 845px;
-}
-#d_1 {
-    top: 454px;
-    left: 629px;
-}
-#d_2 {
-    top: 454px;
-    left: 701px;
-}
-#d_3 {
-    top: 454px;
-    left: 773px;
-}
-#d_c {
-    top: 517px;
-    left: 629px;
-}
-#d_0 {
-    top: 517px;
-    left: 701px;
-}
-#bt_r {
-    top: 517px;
-    left: 773px;
-}
-#o_a {
-    width: 52px;
-    height: 107px;
-    top: 454px;
-    left: 845px;
-}
-#b_c_one {
-    width: 269px;
-    height: 27px;
-    position: absolute;
-    top: 579px;
-    left: 629px;
-}
-
 
 .footer {
     margin-top: 5px;
