--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    /*overflow: hidden;*/
     background-color: #2D0051;
 }
 .header {
@@ -23,6 +24,9 @@ body {
     vertical-align: text-bottom;
     font-weight: 700;
     font-size: 14px;
+}
+#homepage {
+    color: #e4c2ff;
 }
 a {
     color: #fff;
@@ -52,85 +56,37 @@ a:before {
 }
 .elements {
     background-image: url(bg_1.jpg);
-    height: 150vh;
+    height:200vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -45px;
 }
-.bird-pic {
-    vertical-align: middle;
+.text-desc {
+    padding-left: 10px;
+    padding-right: 10px;
     position: absolute;
-    top: 30%;
-    right: 5%;
+    left: 10%;
+    top: 14%;
+    background-color: #2D0051;
+    color: #e4c2ff;
 }
-.cat-pic {
+.pictures-hp {
     position: absolute;
-    top: 60%;
-    right: 3%;
+    /*top: 400px;*/
+    top: 20%;
+    left: 43%;
+    transform: rotate(-30deg)
 }
-.table {
-	border: none;
-	margin-bottom: 20px;
-	border-collapse: separate;
-    position: relative;
-    left: 5%;
-    top: 3%;
-    background-color: white;
-}
-.table caption {
-    font-weight: bold;
-    font-size: 16px;
-    text-align: left;
-}
-.table thead th {
-	font-weight: bold;
-	text-align: left;
-	border: none;
-  text-align: center;
-	padding: 10px 15px;
-	background: #2D0051;
-  color: white;
-	font-size: 12px;
-	border-top: 1px solid #ddd;
-}
-.table tr th:first-child, .table tr td:first-child {
-	border-left: 1px solid #ddd;
-}
-.table tr th:last-child, .table tr td:last-child {
-	border-right: 1px solid #ddd;
-}
-.table thead tr th:first-child {
-	border-radius: 20px 0 0 0;
-}
-.table thead tr th:last-child {
-	border-radius: 0 20px 0 0;
-}
-.table tbody td {
-	text-align: left;
-	border: none;
-	padding: 10px 15px;
-	font-size: 12px;
-	vertical-align: top;
-}
-.table tbody tr:nth-child(even) {
-	background: #e4c2ff;
-}
-.table tbody tr:last-child td{
-	border-bottom: 1px solid #ddd;
-}
-.table tbody tr:last-child td:first-child {
-	border-radius: 0 0 0 20px;
-}
-.table tbody tr:last-child td:last-child {
-	border-radius: 0 0 20px 0;
-}
-#table2 {
-    position: relative;
-    left: 5%;
-}
-#table3 {
-    position: relative;
-    left: 5%;
+.list {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    position: absolute;
+    top: 14%;
+    right: 4.5%;
+    background-color: #2D0051;
+    color: #e4c2ff;
 }
 .footer {
     margin-top: 5px;
@@ -196,5 +152,6 @@ a:before {
     font-size: 14px;
     position: relative;
     right: -410px;
+    
     object-position: center;
 }
