--- a/feedback_style.css
+++ b/feedback_style.css
@@ -1,13 +1,12 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    color: black;
     overflow: hidden;
-    background-color: #2D0051;
 }
-.header {
+header {
     margin: 0px;
     margin-bottom: -22px;
+    background-color: #2D0051;
 }
 .container {
     margin: 0px;   
@@ -88,11 +87,17 @@ a:before {
 .buttons {
     text-align: center;
 }
-.footer {
+footer {
+    background-color: #2D0051;
     margin-top: 5px;
+    position: absolute;
+    top: 708px;
+    bottom: 0px;
+    height: 40px;
+    width: 100%;
 }
 .down-line {
-    height: 0.2vh;
+    height: 3vh;
     padding-top: 36px;
     display: flex;
     align-items: center;
@@ -103,8 +108,8 @@ a:before {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    position: relative;
-    bottom: -2px;
+    position: absolute;
+    bottom: 12px;
     vertical-align: middle;
 }
 .my-name {
