--- a/in_7lab.css
+++ b/in_7lab.css
@@ -2,9 +2,12 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
-    background-color: #2D0051;
 }
-.header {
+header {
+    background-color: #2D0051;
+    height: 50px;
+    width: 100%;
+    position: absolute;
     margin: 0px;
 }
 .container {
@@ -56,7 +59,7 @@ a:before {
 }
 .elements {
     background-image: url(bg_1.jpg);
-    height: 88vh;
+    height: 97vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -45px;
@@ -177,10 +180,14 @@ h6 {
     top: 579px;
     left: 629px;
 }
-
-
-.footer {
+footer {
+    background-color: #2D0051;
     margin-top: 5px;
+    position: absolute;
+    top: 708px;
+    bottom: 0px;
+    height: 40px;
+    width: 100%;
 }
 .down-line {
     height: 3vh;
@@ -194,8 +201,8 @@ h6 {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    position: relative;
-    bottom: 8px;
+    position: absolute;
+    bottom: 12px;
     vertical-align: middle;
 }
 .my-name {
@@ -228,7 +235,6 @@ h6 {
     font-weight: 700;
     font-size: 14px;
 }
-
 .number-phone {
     color: white;
     text-decoration: none;
