--- a/login_style.css
+++ b/login_style.css
@@ -2,11 +2,11 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
-    background-color: #2D0051;
 }
-.header {
+header {
     margin: 0px;
     margin-bottom: -22px;
+    background-color: #2D0051;
 }
 .container {
     margin: 0px;   
@@ -82,11 +82,17 @@ a:before {
 .buttons {
     text-align: center;
 }
-.footer {
+footer {
+    background-color: #2D0051;
     margin-top: 5px;
+    position: absolute;
+    top: 708px;
+    bottom: 0px;
+    height: 40px;
+    width: 100%;
 }
 .down-line {
-    height: 0.2vh;
+    height: 3vh;
     padding-top: 36px;
     display: flex;
     align-items: center;
@@ -97,8 +103,8 @@ a:before {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    position: relative;
-    bottom: -2px;
+    position: absolute;
+    bottom: 12px;
     vertical-align: middle;
 }
 .my-name {
