--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    /*overflow: hidden;*/
-    background-color: #2D0051;
+    overflow: hidden;
 }
-.header {
+header {
+    background-color: #2D0051;
+    height: 50px;
+    width: 100%;
+    position: absolute;
     margin: 0px;
 }
 .container {
@@ -54,9 +57,9 @@ a:before {
     -webkit-transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 200ms;
     transition: clip cubic-bezier(0.25, 0.46, 0.45, 0.94) 300ms;
 }
-.elements {
+main {
     background-image: url(bg_1.jpg);
-    height:200vh;
+    height: 97vh;
     background-repeat: round;
     background-size: 30%;
     margin-bottom: -45px;
@@ -88,8 +91,14 @@ a:before {
     background-color: #2D0051;
     color: #e4c2ff;
 }
-.footer {
+footer {
+    background-color: #2D0051;
     margin-top: 5px;
+    position: absolute;
+    top: 708px;
+    bottom: 0px;
+    height: 40px;
+    width: 100%;
 }
 .down-line {
     height: 3vh;
@@ -103,8 +112,8 @@ a:before {
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    position: relative;
-    bottom: 8px;
+    position: absolute;
+    bottom: 12px;
     vertical-align: middle;
 }
 .my-name {
@@ -152,6 +161,5 @@ a:before {
     font-size: 14px;
     position: relative;
     right: -410px;
-    
     object-position: center;
 }
