--- a/math_6lab.css
+++ b/math_6lab.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
+    display: flex;
 }
 header {
     background-color: #2D0051;
@@ -64,6 +65,73 @@ a:before {
     background-size: 30%;
     margin-bottom: -45px;
 }
+#key_again {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 310px;
+    left: 480px;
+    transform: rotate(-5deg);
+    border: 2px #2D0051;
+    cursor: pointer;
+}
+/*
+* {
+    box-sizing: border-box;
+    &::before, &::after {
+      box-sizing: border-box;
+    }
+}
+.button {
+    display: inline-block;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    &.key_again {
+        font-weight: 600;
+        color: #382b22;
+        text-transform: uppercase;
+        padding: 1.25em 2em;
+        background: #fff0f0;
+        border: 2px solid #b18597;
+        border-radius: 0.75em;
+        transform-style: preserve-3d;
+        transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+        &::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #f9c4d2;
+        border-radius: inherit;
+        box-shadow: 0 0 0 2px #b18597, 0 0.625em 0 0 #ffe3e2;
+        transform: translate3d(0, 0.75em, -1em);
+        transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+        }
+        &:hover {
+        background: #ffe9e9;
+        transform: translate(0, 0.25em);
+        &::before {
+            box-shadow: 0 0 0 2px #b18597, 0 0.5em 0 0 #ffe3e2;
+            transform: translate3d(0, 0.5em, -1em);
+        }
+        }
+        &:active {
+        background: #ffe9e9;
+        transform: translate(0em, 0.75em);
+        &::before {
+            box-shadow: 0 0 0 2px #b18597, 0 0 #ffe3e2;
+            transform: translate3d(0, 0, -1em);
+        }
+    }
+  }
+}
+*/
 .congrats_pic {
     position: absolute;
     top: 120px;
